# mcpvectordb

./: .env.example  .gitignore  .mcpbignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  manifest.json  mcpvectordb-CLAUDE.md  mcpvectordb-implementation-plan.md  mcpvectordb.spec  pyproject.toml
.claude/: CLAUDE.md
.claude/rules/: code-style.md  lancedb-best-practices.md  repo-docs-best-practices.md  testing.md
deploy/docker/: claude_desktop_config.example.json
deploy/k3s/: deployment.yaml  pvc.yaml  service.yaml
deploy/local/: README.md  claude_desktop_config.example.json  docker-compose.yml
deploy/tailscale/: claude_desktop_config.example.json
docs/: README.md  api-reference.md  contributing.md  e2e-test-cases.md  installation.md  mcp-tool-spec.md  use-cases.md  user-guide.md  windows-setup.md
examples/sample_docs/: sample.docx  sample.html  sample.pptx  sample.xlsx
scripts/: build-windows.ps1  setup-windows.ps1
src/mcpvectordb/: __init__.py  __main__.py  _download_model.py  auth.py  chunker.py  cli.py  config.py  converter.py  embedder.py  exceptions.py  ingestor.py  server.py  store.py
tests/: bad_request.txt  conftest.py  test_auth.py  test_chunker.py  test_cli.py  test_config.py  test_converter.py  test_embedder.py  test_ingestor.py  test_server.py  test_server_init.py  test_store.py  test_tls_config.py
